# eta_game_system

./: .gitignore  CMakeLists.txt  README.md  controller.c  controller.h  manchester.pio  manchester1.pio  manchester2.pio  matrices.c  matrices.h  matrix_with_extra.c  matrix_with_extra.h  pico_test.c  r2r för dac.asc  scoreboard.c  scoreboard.h  seven_segment.pio  tetris.c  tetris.h  tls3001.c  tls3001.h
7seg/: 7seg-cache.lib  7seg.kicad_pcb  7seg.pro  7seg.sch
7seg/7seg_v1_anton_loof/: 7seg-job.gbrjob
bodge_inverter/bodge_inv/: bodge_inv-cache.lib  bodge_inv.kicad_pcb  bodge_inv.pro  bodge_inv.sch
controller/: controller-F_Cu.dxf  controller-cache.lib  controller.kicad_pcb  controller.sch  controller_sw.dep  controller_sw.stp  controller_ws.stw  controller_ws.wdb  controller_ws.wed  main.c  stm8_interrupt_vector.c
main_board/: main_board-cache.lib  main_board-rescue.lib  main_board.kicad_pcb  main_board.pro  main_board.sch  sym-lib-table
main_board/eta_game_system_anton_loof/: main_board-job.gbrjob
